<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/x40">

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/text03"
        android:textSize="@dimen/text_size18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y30"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/line"
            android:gravity="center"
            android:paddingBottom="@dimen/y10"
            android:paddingTop="@dimen/y10"
            android:text="@string/cancel"
            android:textColor="@color/text66"
            android:textSize="@dimen/text_size18" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/main_text_selected"
            android:gravity="center"
            android:paddingBottom="@dimen/y10"
            android:paddingTop="@dimen/y10"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size18" />
    </LinearLayout>
</com.zhy.autolayout.AutoLinearLayout>