<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/view_title" />

    <EditText
        android:id="@+id/et_phone_num"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y50"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginTop="@dimen/y30"
        android:background="@drawable/shape_user_name"
        android:hint="请输入手机号码"
        android:inputType="number"
        android:maxLength="11"
        android:maxLines="1"
        android:paddingLeft="@dimen/x12"
        android:textColor="@color/text66"
        android:textSize="@dimen/text_size14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginTop="@dimen/y10"
        android:text="@string/register_hint"
        android:textColor="@color/text99"
        android:textSize="@dimen/text_size16" />

    <Button
        android:id="@+id/bt_send"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y40"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginTop="@dimen/y20"
        android:background="@drawable/shape_item_already_buy_comments"
        android:text="@string/send_msg"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size18" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y16"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/x10"
            android:layout_height="@dimen/y10"
            android:layout_marginLeft="@dimen/x12"
            android:background="@drawable/shape_mine_text_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x10"
            android:text="@string/agree"
            android:textColor="@color/text99"
            android:textSize="@dimen/text_size12" />

        <TextView
            android:id="@+id/tv_register_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x10"
            android:text="@string/register_protocol"
            android:textColor="@color/main_text_selected"
            android:textSize="@dimen/text_size12" />
    </LinearLayout>

</LinearLayout>