<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.p609915198.fwb.mvp.ui.activity.MainActivity">

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:layout_marginBottom="@dimen/y2"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_home_page"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_home_page"
                android:layout_width="@dimen/x27"
                android:layout_height="@dimen/x27"
                android:src="@mipmap/ic_home_selected" />

            <TextView
                android:id="@+id/tv_home_page"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/y5"
                android:gravity="center"
                android:text="@string/main_home_page"
                android:textColor="@color/main_text_selected"
                android:textSize="@dimen/text_size10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_listen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_listen"
                android:layout_width="@dimen/x27"
                android:layout_height="@dimen/x27"
                android:src="@mipmap/ic_listen" />

            <TextView
                android:id="@+id/tv_listen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/y5"
                android:gravity="center"
                android:text="@string/main_listen"
                android:textColor="@color/main_text"
                android:textSize="@dimen/text_size10" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_listen_util"
            android:layout_width="@dimen/x50"
            android:layout_height="@dimen/x50"
            android:src="@mipmap/ic_home_play" />

        <LinearLayout
            android:id="@+id/ll_discover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_discover"
                android:layout_width="@dimen/x27"
                android:layout_height="@dimen/x27"
                android:src="@mipmap/ic_discover" />

            <TextView
                android:id="@+id/tv_discover"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/y5"
                android:gravity="center"
                android:text="@string/main_discover"
                android:textColor="@color/main_text"
                android:textSize="@dimen/text_size10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_mine"
                android:layout_width="@dimen/x27"
                android:layout_height="@dimen/x27"
                android:src="@mipmap/ic_mine" />

            <TextView
                android:id="@+id/tv_mine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/y5"
                android:gravity="center"
                android:text="@string/main_mine"
                android:textColor="@color/main_text"
                android:textSize="@dimen/text_size10" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
