<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x14"
            android:text="@string/main_mine"
            android:textColor="@color/text22"
            android:textSize="@dimen/text_size30" />

        <!--<ImageView-->
        <!--android:id="@+id/iv_email"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginRight="@dimen/x30"-->
        <!--android:layout_toLeftOf="@id/iv_search"-->
        <!--android:src="@mipmap/ic_listen_message" />-->

        <!--<ImageView-->
        <!--android:id="@+id/iv_search"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginRight="@dimen/x20"-->
        <!--android:src="@mipmap/ic_listen_search" />-->
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y20"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_download_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y12"
                android:drawableTop="@mipmap/ic_listen_donwload"
                android:drawablePadding="12dp"
                android:gravity="center_horizontal"
                android:text="@string/download"
                android:textColor="@color/text6d"
                android:textSize="@dimen/text_size14" />

            <TextView
                android:id="@+id/tv_download_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y9"
                android:textColor="@color/text99"
                android:textSize="@dimen/text_size12"
                tools:text="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_history_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y12"
                android:drawableTop="@mipmap/ic_history"
                android:drawablePadding="12dp"
                android:gravity="center_horizontal"
                android:text="@string/history"
                android:textColor="@color/text6d"
                android:textSize="@dimen/text_size14" />

            <TextView
                android:id="@+id/tv_history_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y9"
                android:textColor="@color/text99"
                android:textSize="@dimen/text_size12"
                tools:text="4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_buy_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y12"
                android:drawableTop="@mipmap/ic_listen_buy"
                android:drawablePadding="12dp"
                android:gravity="center_horizontal"
                android:text="@string/buy"
                android:textColor="@color/text6d"
                android:textSize="@dimen/text_size14" />

            <TextView
                android:id="@+id/tv_buy_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y9"
                android:textColor="@color/text99"
                android:textSize="@dimen/text_size12"
                tools:text="暂无" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x14"
        android:layout_marginTop="@dimen/y20"
        android:layout_marginBottom="@dimen/y8"
        android:text="我的订阅"
        android:textColor="@color/main_text_selected"
        android:textSize="@dimen/text_size18" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>